--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Click the Button</h1>
       <div>
         <button type="button">Start</button>
       </div>
