--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
           <p>&copy;Daneshwar verma 2024</p>
       </div>
   </footer> </footer>
-    <script src="/index.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
