--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicee</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
@@ -37,6 +37,6 @@
           <p>&copy;Daneshwar verma 2024</p>
       </div>
   </footer> </footer>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
