--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <footer <footer class="footer-elements">
+    <footerclass="footer-elements">
       <div class="links">
       <a href="https://www.linkedin.com/in/daneshwar-verma/"><img height="30" src="./images/linkdin.svg" alt="linkdin link"></a>
       <a href="https://github.com/DaneshwarVerma"><img height="30" src="./images/github.svg" alt="github link"></a>
@@ -36,7 +36,7 @@
       <div class="copyright">
           <p>&copy;Daneshwar verma 2024</p>
       </div>
-  </footer> </footer>
+  </footer>
     <script src="script.js"></script>
   </body>
 </html>
